[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/pipis.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://textures/tlo.png" type="Texture" id=4]
[ext_resource path="res://sound/spamton.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/pause.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/golden_pipis.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/falling_pipis.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -42.0661, 128.579, 42.0661, -128.579, 773, 307, -73.0204, -80.9574, 73.0204, 80.9574, 1262, 302, 44.4472, -62.7023, -44.4472, 62.7023, 1256, 733, 72.2267, 85.7197, -72.2267, -85.7197, 773, 724, -73.0204, 100.8, 73.0204, -100.8, 773, 307, 0, 0, 0, 0, 773, 308 )
}

[node name="Node" type="Node"]
script = ExtResource( 3 )
golden_pipis = ExtResource( 7 )

[node name="pipis" parent="." instance=ExtResource( 2 )]
position = Vector2( 1000, 540 )
scale = Vector2( 25, 25 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 721, 540 )
scale = Vector2( 2.24688, 2.25 )
z_index = -10
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="pause" parent="." instance=ExtResource( 6 )]
visible = false
z_index = 5

[node name="golden_pipis" parent="." instance=ExtResource( 7 )]
visible = false
script = null

[node name="falling_pipis" parent="." instance=ExtResource( 8 )]
visible = false

[node name="golden_pipis_spawn_path" type="Path2D" parent="."]
position = Vector2( 0.00012207, 47.8674 )
scale = Vector2( 1, 0.938957 )
curve = SubResource( 1 )

[node name="golden_pipis_spawn_location" type="PathFollow2D" parent="golden_pipis_spawn_path"]
position = Vector2( 773, 307 )
rotation = -1.22645

[node name="golden_pipis_spawn_timer" type="Timer" parent="."]
autostart = true

[node name="golden_pipis_timer_offset" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="golden_pipis_disapear" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="golden_pipis_bonus" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="click" from="pipis" to="." method="_on_pipis_click"]
[connection signal="bigshot" from="HUD" to="." method="_on_HUD_bigshot"]
[connection signal="bpipis" from="HUD" to="." method="_on_HUD_bpipis"]
[connection signal="cungadero" from="HUD" to="." method="_on_HUD_cungadero"]
[connection signal="hcungadero" from="HUD" to="." method="_on_HUD_hcungadero"]
[connection signal="hide_message" from="HUD" to="." method="_on_HUD_hide_message"]
[connection signal="hpipis" from="HUD" to="." method="_on_HUD_hpipis"]
[connection signal="lpipis" from="HUD" to="." method="_on_HUD_lpipis"]
[connection signal="mpipis" from="HUD" to="." method="_on_HUD_mpipis"]
[connection signal="smpipis" from="HUD" to="." method="_on_HUD_smpipis"]
[connection signal="supipis" from="HUD" to="." method="_on_HUD_supipis"]
[connection signal="pause" from="pause" to="." method="_on_pause_pause"]
[connection signal="songChange" from="pause" to="." method="_on_pause_songChange"]
[connection signal="timeout" from="golden_pipis_spawn_timer" to="." method="_on_golden_pipis_spawn_timer_timeout"]
[connection signal="timeout" from="golden_pipis_timer_offset" to="." method="_on_golden_pipis_timer_offset_timeout"]
[connection signal="timeout" from="golden_pipis_disapear" to="." method="_on_golden_pipis_disapear_timeout"]
[connection signal="timeout" from="golden_pipis_bonus" to="." method="_on_golden_pipis_bonus_timeout"]
